--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.3.0
 Jinja2==3.1.6
 kombu==5.5.4
 lxml==6.0.0
@@ -31,11 +32,13 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 packaging==25.0
 pathlib==1.0.1
+pluggy==1.6.0
 prompt_toolkit==3.0.51
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
 PyPDF2==3.0.1
+pytest==9.0.1
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
 python-dotenv==1.1.1
