--- a/k8s/01-infrastructure/postgres/statefulset.yaml
+++ b/k8s/01-infrastructure/postgres/statefulset.yaml
@@ -21,10 +21,7 @@ spec:
             - name: POSTGRES_USER
               value: "postgres"
             - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: upload-secrets
-                  key: postgres-password
+              value: "postgres"
             - name: POSTGRES_DB
               value: "postgres"
           ports:
