--- a/k8s/03-web/deployment.yaml
+++ b/k8s/03-web/deployment.yaml
@@ -12,6 +12,10 @@ spec:
     metadata:
       labels:
         app: upload-web
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8000"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
         - name: upload-web
