--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ asyncpg==0.30.0
 billiard==4.2.1
 celery==5.5.3
 certifi==2025.7.14
+charset-normalizer==3.4.4
 click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
@@ -32,7 +33,10 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 packaging==25.0
 pathlib==1.0.1
+pillow==12.0.0
 pluggy==1.6.0
+prometheus-fastapi-instrumentator==7.1.0
+prometheus_client==0.23.1
 prompt_toolkit==3.0.51
 pydantic==2.11.7
 pydantic_core==2.33.2
@@ -45,6 +49,7 @@ python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.2
 redis==6.2.0
+reportlab==4.4.5
 rich==14.0.0
 rich-toolkit==0.14.8
 rignore==0.6.4
